# glean-proxy

./: .bazelrc  .cursorignore  .gitignore  .pmd-java-ruleset.xml  .pre-commit-config.yaml  .windsurfrules  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  maven_install.json  pom.xml
.cursor/rules/: bazel-build-system.mdc  critical-always-apply.mdc
.github/: pull_request_template.md
.github/workflows/: bazel-test-runner.yml  maven-publish.yml  publish-image-tarball.yml
src/main/java/com/glean/proxy/: BUILD.bazel  ChainedProxyConfiguration.java  DynamicHttpFiltersSourceAdapter.java  FilterConfiguration.java  ProxyMain.java  ProxyNetworking.java
src/main/java/com/glean/proxy/filters/: AwsDisallowInternalAddressForTransitVpc.java  AwsFilterEgressTrafficByDomain.java  BUILD.bazel  CompositeFilter.java  GCPDisallowInternalAddressFilter.java  HttpNotFoundFilter.java  InvalidCloudPlatformFilter.java  IpAddressRequestFilter.java  LegacyRequestFilter.java  LivenessCheckRequestFilter.java  ProxyDebugFilter.java  ProxyMetricsFilter.java  UpgradeRequestFilter.java
src/main/java/com/glean/proxy/filters/helpers/: AllowedEgressDomains.java  BUILD.bazel  CachedNicResolver.java  HttpClientFactory.java  IpRouteNicResolver.java  NicResolver.java  OnPremisesProxy.java  ShellCommandRunner.java  UpgradeRequestHandler.java  Utils.java
src/main/java/com/glean/proxy/metrics/: BUILD.bazel  MetricData.java  OpenTelemetrySetup.java  ProxyMetrics.java  ProxyMetricsExporter.java
src/main/java/com/glean/proxy/schemas/: BUILD.bazel  CheckConnectivityResponse.java  GetRouteResponse.java  ProcessResponse.java  ResolveHostResponse.java
src/test/java/com/glean/proxy/: BUILD.bazel  FilterConfigurationTest.java  ProxyNetworkingTest.java
src/test/java/com/glean/proxy/filters/: AwsDisallowInternalAddressForTransitVpcTest.java  AwsFilterEgressTrafficByDomainTest.java  BUILD.bazel  GCPDisallowInternalAddressFilterTest.java  ProxyDebugFilterTest.java
src/test/java/com/glean/proxy/filters/helpers/: BUILD.bazel  CachedNicResolverTest.java  IpRouteNicResolverTest.java  OnPremisesProxyTest.java
src/test/java/com/glean/proxy/test_utils/: BUILD.bazel  TestUtils.java
tools/: base-branch-diff.sh  enforce-no-main-commit.sh  format-java.sh  generate_java_rules.py  java-no-wildcard-imports.sh  precommit-bazel-tests.py
tools/java_refactor_scripts/: ensure_1_1_1_java.py  sync_java_tests.py
tools/lint/: BUILD.bazel  lint.sh  linters.bzl  rules_lint_pmd7.patch
tools/prompts/: general_code.md
tools/rules/jvm/: BUILD.bazel  rules_jvm.patch
