"""Definition of the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//:__subpackages__"])

java_binary(
    name = "pmd",
    main_class = "net.sourceforge.pmd.cli.PmdCli",
    runtime_deps = ["@net_sourceforge_pmd"],
)
