load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "test_utils",
    testonly = 1,
    srcs = ["TestUtils.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_netty_netty_codec_http",
        "@maven//:org_assertj_assertj_core",
    ],
)
